--- a/app/src/main/res/layout/activity_portada.xml
+++ b/app/src/main/res/layout/activity_portada.xml
@@ -1,43 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:orientation="vertical"
     tools:context=".activities.PortadaActivity">
 
     <ImageView
-        android:id="@+id/idimagenportada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:id="@+id/idimagenportada_bottom"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:contentDescription="@string/nombre_portada"
-        android:scaleX="2"
-        android:scaleY="2"
-        android:src="@mipmap/ic_cupet" />
-
-    <TextView
-        android:id="@+id/id_texto_portada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/idimagenportada"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="20dp"
-        android:text="@string/nombre_portada"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:src="@mipmap/ic_portada_bottom_foreground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="2:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/id_texto_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/id_texto_portada"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="0dp"
+        android:layout_marginBottom="32dp"
         android:text=""
         android:textColor="@color/colorPrimary"
-        android:textSize="20sp" />
-</RelativeLayout>
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/idimagenportada_bottom"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <ImageView
+        android:id="@+id/idimagenportada"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="@string/nombre_portada"
+        android:src="@mipmap/ic_glp_foreground"
+        app:layout_constraintBottom_toTopOf="@+id/id_texto_version"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
