--- a/app/src/main/res/layout/activity_creditos.xml
+++ b/app/src/main/res/layout/activity_creditos.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ayuda.CreditosActivity">
+    tools:context=".activities.ayuda.CreditosActivity"
+    android:background="@color/colorPrimaryDark">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
