--- a/app/src/main/res/layout/fragment_casa_comercial.xml
+++ b/app/src/main/res/layout/fragment_casa_comercial.xml
@@ -3,96 +3,218 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.informaciones.CasaComercialFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".activities.servicios.CasaComercialFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="15px"
-        android:layout_marginLeft="15px"
-        android:layout_marginRight="15px">
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
+
+        <ImageView
+            android:id="@+id/id_municipio_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_location_on_black_24dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/id_texto_municipio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/id_municipio_icon"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="5dp"
+            android:text="@string/palabra_municipio"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
 
         <Spinner
-                android:id="@+id/id_combo_municipios"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/localizacion" />
-
-        <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/id_combo_municipios"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            app:layout_constraintTop_toBottomOf="@+id/id_municipio_icon"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-            <ImageView
-                android:id="@+id/id_direccion_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_location_on_black_24dp"
-                />
-            <TextView
-                android:id="@+id/id_direccion_texto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5px"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
+        <View
+            android:id="@+id/id_separator_0"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintTop_toBottomOf="@+id/id_combo_municipios"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="15dp"/>
 
-            <ImageView
-                android:id="@+id/id_horario_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_timer_black_24dp"
-                />
-            <TextView
-                android:id="@+id/id_horario_texto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5px"/>
-        </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/id_direccion_icon"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:src="@drawable/ic_location_on_black_24dp"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_0"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="15dp"/>
 
-            <ImageView
-                android:id="@+id/id_telefono_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_phone_black_24dp"
-                />
-            <TextView
-                android:id="@+id/id_telefono_texto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5px"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/id_texto_direccion"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_0"
+            app:layout_constraintStart_toEndOf="@+id/id_direccion_icon"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="5dp"
+            android:text="@string/palabra_direccion"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
 
-            <ImageView
-                android:id="@+id/id_mapa_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_location_on_black_24dp"
-                />
-            <TextView
-                android:id="@+id/id_mapa_texto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5px"
-                android:text="Ver en Mapa"/>
-        </LinearLayout>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/id_direccion_texto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/id_direccion_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="5dp"
+            android:paddingRight="5dp"/>
+
+        <View
+            android:id="@+id/id_separator_1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintTop_toBottomOf="@+id/id_direccion_texto"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="15dp"/>
+
+        <ImageView
+            android:id="@+id/id_horario_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_timer_black_24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_1"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/id_texto_horario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/id_horario_icon"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_1"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/palabra_horario"
+            android:textSize="16sp"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/id_horario_texto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_horario_icon"
+            android:textSize="16sp"
+            android:layout_marginLeft="5dp"
+            android:paddingRight="5dp"/>
+
+        <View
+            android:id="@+id/id_separator_2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintTop_toBottomOf="@+id/id_horario_texto"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="15dp"/>
+
+        <ImageView
+            android:id="@+id/id_telefono_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_phone_black_24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_2"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/id_texto_telefono"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/id_telefono_icon"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_2"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="5dp"
+            android:text="@string/palabra_telefono"
+            android:textSize="16sp"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/id_texto_llamar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_2"
+            android:layout_marginTop="15dp"
+            android:paddingRight="5dp"
+            android:text="@string/palabra_llamar"
+            android:textSize="16sp"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/id_telefono_texto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_telefono_icon"
+            android:layout_marginLeft="5dp"
+            android:paddingRight="5dp"
+            android:textSize="16sp"/>
+
+        <View
+            android:id="@+id/id_separator_3"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintTop_toBottomOf="@+id/id_telefono_texto"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="15dp"/>
+
+        <ImageView
+            android:id="@+id/id_mapa_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_location_on_black_24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/id_separator_3"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/id_mapa_texto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/palabra_mapa"
+            app:layout_constraintStart_toEndOf="@+id/id_mapa_icon"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_3"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
