--- a/app/src/main/res/layout/fragment_empresa_comercializadora.xml
+++ b/app/src/main/res/layout/fragment_empresa_comercializadora.xml
@@ -3,98 +3,216 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.informaciones.EmpresaComercializadoraFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".activities.servicios.EmpresaComercializadoraFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="15px"
-        android:layout_marginLeft="15px"
-        android:layout_marginRight="15px">
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/id_card_titulo_empresa_comercializadora"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:cardBackgroundColor="@color/colorPrimaryDark"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
+            android:layout_marginBottom="5dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/card_edge"
+                android:layout_margin="1dp">
+
+                <TextView
+                    android:id="@+id/id_nombre_empresa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp"
+                    android:textAllCaps="true"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:id="@+id/id_direccion_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_location_on_black_24dp"
+            app:layout_constraintTop_toBottomOf="@+id/id_card_titulo_empresa_comercializadora"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="15dp"/>
 
         <TextView
-            android:id="@+id/id_nombre_empresa"
-            android:layout_width="match_parent"
+            android:id="@+id/id_texto_direccion"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:contentDescription="Nombre de la Empresa" />
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/id_card_titulo_empresa_comercializadora"
+            app:layout_constraintStart_toEndOf="@+id/id_direccion_icon"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="5dp"
+            android:text="@string/palabra_direccion"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/id_direccion_empresa"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/id_direccion_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="5dp"
+            android:paddingRight="5dp"/>
 
-            <ImageView
-                android:id="@+id/id_direccion_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_location_on_black_24dp"
-                />
-            <TextView
-                android:id="@+id/id_direccion_empresa"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5px"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
+        <View
+            android:id="@+id/id_separator_1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintTop_toBottomOf="@+id/id_direccion_empresa"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="15dp"/>
 
-            <ImageView
-                android:id="@+id/id_horario_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_timer_black_24dp"
-                />
-            <TextView
-                android:id="@+id/id_horario_empresa"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5px"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/id_horario_icon"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:src="@drawable/ic_timer_black_24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_1"
+            android:layout_marginTop="15dp"/>
 
-            <ImageView
-                android:id="@+id/id_telefono_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_phone_black_24dp"
-                />
-            <TextView
-                android:id="@+id/id_telefono_empresa"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5px"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/id_texto_horario"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            app:layout_constraintStart_toEndOf="@+id/id_horario_icon"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_1"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/palabra_horario"
+            android:textSize="16sp"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
 
-            <ImageView
-                android:id="@+id/id_mapa_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_location_on_black_24dp"
-                />
-            <TextView
-                android:id="@+id/id_mapa_empresa"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5px"
-                android:text="Ver en Mapa"/>
-        </LinearLayout>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/id_horario_empresa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_horario_icon"
+            android:textSize="16sp"
+            android:layout_marginLeft="5dp"
+            android:paddingRight="5dp"/>
+
+        <View
+            android:id="@+id/id_separator_2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintTop_toBottomOf="@+id/id_horario_empresa"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="15dp"/>
+
+        <ImageView
+            android:id="@+id/id_telefono_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_phone_black_24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_2"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/id_texto_telefono"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/id_telefono_icon"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_2"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="5dp"
+            android:text="@string/palabra_telefono"
+            android:textSize="16sp"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/id_texto_llamar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_2"
+            android:layout_marginTop="15dp"
+            android:paddingRight="5dp"
+            android:text="@string/palabra_llamar"
+            android:textSize="16sp"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/id_telefono_empresa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_telefono_icon"
+            android:layout_marginLeft="5dp"
+            android:paddingRight="5dp"
+            android:textSize="16sp"/>
+
+        <View
+            android:id="@+id/id_separator_3"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintTop_toBottomOf="@+id/id_telefono_empresa"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="15dp"/>
+
+        <ImageView
+            android:id="@+id/id_mapa_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_location_on_black_24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/id_separator_3"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/id_mapa_empresa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/palabra_mapa"
+            app:layout_constraintStart_toEndOf="@+id/id_mapa_icon"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_3"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
