--- a/app/src/main/res/layout/list_item_punto_venta.xml
+++ b/app/src/main/res/layout/list_item_punto_venta.xml
@@ -8,10 +8,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:orientation="vertical">
 
 
         <ImageView
@@ -19,170 +19,170 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_location_on_black_24dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/id_texto_direccion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/id_direccion_icon"
             android:layout_marginLeft="5dp"
             android:text="@string/palabra_direccion"
             android:textAllCaps="true"
-            android:textStyle="bold"/>
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/id_direccion_icon"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/id_direccion_texto_pt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/id_direccion_icon"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="5dp"
-            android:paddingRight="5dp"/>
+            android:paddingRight="5dp"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_direccion_icon" />
 
         <View
             android:id="@+id/id_separator_1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_margin="15dp"
             android:background="@color/colorPrimaryDark"
-            app:layout_constraintTop_toBottomOf="@+id/id_direccion_texto_pt"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="15dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_direccion_texto_pt" />
 
         <ImageView
             android:id="@+id/id_horario_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:src="@drawable/ic_timer_black_24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/id_separator_1"
-            android:layout_marginTop="15dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_1" />
 
         <TextView
             android:id="@+id/id_texto_horario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/id_horario_icon"
-            app:layout_constraintTop_toBottomOf="@+id/id_separator_1"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="15dp"
             android:text="@string/palabra_horario"
-            android:textSize="16sp"
             android:textAllCaps="true"
-            android:textStyle="bold"/>
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/id_horario_icon"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_1" />
 
         <TextView
             android:id="@+id/id_horario_texto_pt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/id_horario_icon"
-            android:textSize="16sp"
             android:layout_marginLeft="5dp"
-            android:paddingRight="5dp"/>
+            android:paddingRight="5dp"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_horario_icon" />
 
         <View
             android:id="@+id/id_separator_2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_margin="15dp"
             android:background="@color/colorPrimaryDark"
-            app:layout_constraintTop_toBottomOf="@+id/id_horario_texto_pt"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="15dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_horario_texto_pt" />
 
         <ImageView
             android:id="@+id/id_telefono_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:src="@drawable/ic_phone_black_24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/id_separator_2"
-            android:layout_marginTop="15dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_2" />
 
         <TextView
             android:id="@+id/id_texto_telefono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/id_telefono_icon"
-            app:layout_constraintTop_toBottomOf="@+id/id_separator_2"
-            android:layout_marginTop="15dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
             android:text="@string/palabra_telefono"
-            android:textSize="16sp"
             android:textAllCaps="true"
-            android:textStyle="bold"/>
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/id_telefono_icon"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_2" />
 
         <TextView
             android:id="@+id/id_texto_llamar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/id_separator_2"
             android:layout_marginTop="15dp"
             android:paddingRight="5dp"
             android:text="@string/palabra_llamar"
-            android:textSize="16sp"
             android:textAllCaps="true"
-            android:textStyle="bold"/>
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_2" />
 
         <TextView
             android:id="@+id/id_telefono_texto_pt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/id_telefono_icon"
             android:layout_marginLeft="5dp"
             android:paddingRight="5dp"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_telefono_icon" />
 
         <View
             android:id="@+id/id_separator_3"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_margin="15dp"
             android:background="@color/colorPrimaryDark"
-            app:layout_constraintTop_toBottomOf="@+id/id_telefono_texto_pt"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="15dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_telefono_texto_pt" />
 
         <ImageView
             android:id="@+id/id_mapa_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:src="@drawable/ic_location_on_black_24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/id_separator_3"
-            android:layout_marginTop="15dp"/>
+            app:layout_constraintTop_toBottomOf="@id/id_separator_3" />
 
         <TextView
             android:id="@+id/id_mapa_texto_pv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/palabra_mapa"
-            app:layout_constraintStart_toEndOf="@+id/id_mapa_icon"
-            app:layout_constraintTop_toBottomOf="@+id/id_separator_3"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:textSize="16sp"
+            android:text="@string/palabra_mapa"
             android:textAllCaps="true"
-            android:textStyle="bold"/>
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/id_mapa_icon"
+            app:layout_constraintTop_toBottomOf="@+id/id_separator_3" />
 
         <View
             android:id="@+id/id_separator_4"
             android:layout_width="match_parent"
-            android:layout_height="3dp"
+            android:layout_height="4dp"
+            android:layout_marginTop="15dp"
             android:background="@color/colorPrimaryDark"
-            app:layout_constraintTop_toBottomOf="@+id/id_mapa_texto_pv"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="15dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_mapa_texto_pv" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
