--- a/app/src/main/res/layout/fragment_atencion_clientes.xml
+++ b/app/src/main/res/layout/fragment_atencion_clientes.xml
@@ -37,7 +37,7 @@
                     android:id="@+id/id_nombre_atencion_clientes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
+                    android:gravity="center_horizontal"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="16sp"
                     android:textAllCaps="true"
